force-app/main/default/objects/PKB_Featured__c/PKB_Featured__c.object-meta.xml
<CustomObject>
    <description>allows admins to push articles into the "Featured" section, or, alternatively, by specifying a keyword or keywords, allows admins to push articles to the top of searches for those keywords.</description>
    <label>PKB Featured</label>
    <nameField>
        <displayFormat>PKBF-{000000}</displayFormat>
        <label>PKB Featured Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PKB Featured</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>