force-app/main/default/objects/PKB_Featured__c/fields/Expiration__c.field-meta.xml
<CustomField>
    <fullName>Expiration__c</fullName>
    <description>[??] - Date after which the article will no longer appear in the "Featured" section. A empty value means no expiration date. Does not apply to records with the "Is Keyword Article" checked.</description>
    <inlineHelpText>Date after which the article will no longer appear in the "Featured" section. A empty value means no expiration date. Does not apply to records with the "Is Keyword Article" checked.</inlineHelpText>
    <label>Featured Expiration</label>
    <type>Date</type>
</CustomField>