force-app/main/default/objects/PKB_Featured__c/fields/Keyword__c.field-meta.xml
<CustomField>
    <fullName>Keyword__c</fullName>
    <description>[??] - Enter the keyword or keywords here so that, when those keywords are entered into a search on the PKB, this article will appear at the top of the search results as a recommended article.</description>
    <inlineHelpText>Enter the keyword or keywords here so that, when those keywords are entered into a search on the PKB, this article will appear at the top of the search results as a recommended article.</inlineHelpText>
    <label>Keyword</label>
    <length>255</length>
    <type>Text</type>
</CustomField>