force-app/main/default/objects/PKB_Featured__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <defaultValue>1</defaultValue>
    <description>[??] - Specifies the order that this article will appear when being displayed with other articles as part of the featured or recommended sections. Lower numbers appear towards the top.</description>
    <inlineHelpText>Specifies the order that this article will appear when being displayed with other articles as part of the featured or recommended sections. Lower numbers appear towards the top.</inlineHelpText>
    <label>Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>