force-app/main/default/objects/PKB_Featured__c/validationRules/Check_Article_Number_have_9_digits.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Article_Number_have_9_digits</fullName>
    <active>true</active>
    <errorConditionFormula>LEN(Article_Number__c ) &lt; 9</errorConditionFormula>
    <errorDisplayField>Article_Number__c</errorDisplayField>
    <errorMessage>Article Number should be 9 digits (eg: 00001000).</errorMessage>
</ValidationRule>